--- a/src/components/Sign And Log/LogSign.module.css
+++ b/src/components/Sign And Log/LogSign.module.css
@@ -3,6 +3,9 @@
   gap: 2rem;
   min-height: 55vh;
   align-items: center;
+  @media (max-width: 450px) {
+   gap: 0
+  }
 }
 
 .loginPrompt {
@@ -14,6 +17,11 @@
   margin-bottom: 1.5rem;
 }
 
+.loginImg {
+  @media (max-width: 450px) {
+    display: none;
+  }
+}
 .loginTag {
   font-family: "Roboto";
   font-style: normal;
@@ -58,6 +66,9 @@
 .formContainer {
   width: 100%;
   padding: 3rem;
+  @media (max-width: 450px) {
+    padding: 0rem;
+  }
 }
 
 .passVisibleButton {
@@ -66,7 +77,7 @@
   left: 90%;
   cursor: pointer;
   @media (max-width: 500px) {
-    left: 95%;
+    left: 90%;
     top: -42px;
   }
 }
