--- a/src/components/Sign And Log/LogSign.module.css
+++ b/src/components/Sign And Log/LogSign.module.css
@@ -4,7 +4,7 @@
   min-height: 55vh;
   align-items: center;
   @media (max-width: 450px) {
-   gap: 0
+    gap: 0;
   }
 }
 
@@ -30,6 +30,17 @@
   line-height: 26px;
   color: #878787;
   margin-bottom: 3rem;
+}
+
+.joinTag {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 26px;
+  color: #878787;
+  margin-top: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 .passwordInput,
@@ -104,14 +115,37 @@
 }
 
 .alternativeLogin {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 1fr;
   gap: 0.5rem;
   border: 1px solid #ebebeb;
   padding: 8px 16px;
   border-radius: 8px;
+  width: 100%;
+  cursor: pointer;
 }
 
+.alternativeLogin p {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  display: grid;
+  justify-self: center;
+  align-items: center;
+  text-align: center;
+  color: #878787;
+}
 .socials {
   display: flex;
   justify-content: space-between;
+  gap: 0.75rem;
+  margin-bottom: 1.5rem;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: flex-end;
+  justify-content: right;
 }
